--- a/dom-manipulation/index.html
+++ b/dom-manipulation/index.html
@@ -15,12 +15,8 @@
 
   <button id="newQuote">Show New Quote</button>
 
-  <h2>Add a New Quote</h2>
-  <div>
-    <input id="newQuoteText" type="text" placeholder="Enter a new quote" />
-    <input id="newQuoteCategory" type="text" placeholder="Enter quote category" />
-    <button onclick="addQuote()">Add Quote</button>
-  </div>
+  <!-- Empty container for the form -->
+  <div id="formContainer"></div>
 
   <script src="script.js"></script>
 </body>
