--- a/dom-manipulation/index.html
+++ b/dom-manipulation/index.html
@@ -19,5 +19,8 @@
   <div id="formContainer"></div>
 
   <script src="script.js"></script>
+
+  <button onclick="exportToJsonFile()">Export Quotes</button>
+<input type="file" id="importFile" accept=".json" onchange="importFromJsonFile(event)" />
 </body>
 </html>
