--- a/dom-manipulation/index.html
+++ b/dom-manipulation/index.html
@@ -11,6 +11,10 @@
   <label for="categorySelect">Choose a category:</label>
   <select id="categorySelect"></select>
 
+  <select id="categoryFilter" onchange="filterQuotes()">
+  <option value="all">All Categories</option>
+</select>
+
   <div id="quoteDisplay" style="margin: 20px 0; font-style: italic;"></div>
 
   <button id="newQuote">Show New Quote</button>
