--- a/dom-manipulation/index.html
+++ b/dom-manipulation/index.html
@@ -8,6 +8,10 @@
 <body>
   <h1>Dynamic Quote Generator</h1>
 
+  <select id="categoryFilter" onchange="filterQuotes()">
+  <option value="all">All Categories</option>
+</select>
+
   <label for="categorySelect">Choose a category:</label>
   <select id="categorySelect"></select>
 
